--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,9 @@ itsdangerous==2.0.0
 Jinja2==3.0.0
 joblib==1.0.1
 MarkupSafe==2.0.0
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
+mkl-fft
+mkl-random
+mkl-service
 msgpack==1.0.2
 msgpack-numpy==0.4.7.1
 nltk==3.6.1
