--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ imagesize==1.2.0
 itsdangerous==2.0.0
 Jinja2==3.0.0
 joblib==1.0.1
-MarkupSafe==2.0.0
+MarkupSafe
 mkl-fft
 mkl-random
 mkl-service
