--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alabaster==0.7.12
 Babel==2.9.1
 brotlipy==0.7.0
 certifi==2020.12.5
+gunicorn==20.0.4
 cffi==1.14.5
 chardet==4.0.0
 click==8.0.0
@@ -14,12 +15,8 @@ imagesize==1.2.0
 itsdangerous==2.0.0
 Jinja2==3.0.0
 joblib==1.0.1
-MarkupSafe
-mkl-fft
-mkl-random
-mkl-service
-msgpack==1.0.2
-msgpack-numpy==0.4.7.1
+Markdown==3.2.2
+MarkupSafe==1.1.1
 nltk==3.6.1
 numexpr==2.7.3
 numpy==1.18.5
@@ -51,6 +48,7 @@ sphinxcontrib-serializinghtml==1.1.4
 threadpoolctl==2.1.0
 tqdm==4.59.0
 urllib3==1.26.4
-wheel==0.36.2
 Werkzeug==2.0.0
+wheel==0.36.2
+
 
